# doc2convo

./: .flake8  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  doc2md-convo.py  edge_tts_converter.py  md-convo2mp3.py  pyproject.toml  requirements-dev.txt  requirements-edge.txt  requirements-url2convo.txt  requirements.txt  setup-orpheus.py  test_piping.sh  text_to_speech.py  url2convo.py
dev/: ISSUE-0001.md  ISSUE-0002.md  ISSUE-0003.md  ISSUE-0004.md  ISSUE-0005.md  ISSUE-0006.md  ISSUE-0007.md  ISSUE-0008.md  ISSUE-0009.md  ISSUE-0010.md  ISSUE-0011.md  ISSUE-0012.md  ISSUE-0013.md  ISSUE-0014.md  REVIEW-2025-06-16.md  REVIEW.md
scripts/: add_license_header.py  check_license_header.py  format_python.py
src/doc2convo/: __init__.py  exceptions.py
src/doc2convo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/doc2convo/cli/: __init__.py  doc2md.py  main.py  md2mp3.py
src/doc2convo/converters/: __init__.py  audio.py
src/doc2convo/generators/: __init__.py  conversation.py
src/doc2convo/utils/: __init__.py  content_fetcher.py
